tests/miniJava/neg/000059_mutation.MiniJava
class java { extends public static void Main ( String [ ] java ) { { } } }
